@@ -1,6 +1,8 @@
 PHP 4.0                                                                    NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 200?, Version 4.1.0
+- Make ImageColorAt() and ImageColorsForIndex() work with TrueColor images.
+  (Rasmus)
 - Fixed a bug preg_match_all() that would return results under improper indices
   in certain cases. (Andrei)
 - Fixed a crash in str_replace() that would happen if search parameter was an
